[package]
name = "osm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.23", features = ["serialize"] }
prost = "0.11"
flate2 = "1.0"

[build-dependencies]
prost-build = "0.11"

[lib]
crate-type = ["staticlib", "lib"]
